h1. CHANGELOG

h3. 0.6.2 October 26, 2015

* add 'Business Frontpage' theme from startbootstrap.com
* add 'Blog Home' theme from startbootstrap.com
* add 'Heroic Features' theme from startbootstrap.com
* add 'One Page Wonder' theme from startbootstrap.com
* add 'Round About' theme from startbootstrap.com
* add 'Small Business' theme from startbootstrap.com
* add 'The Big Picture' theme from startbootstrap.com
* add 'Thumbnail Gallery' theme from startbootstrap.com
* add 'Full Width Pics' theme from startbootstrap.com
* add '1 Col Portfolio' theme from startbootstrap.com
* add '2 Col Portfolio' theme from startbootstrap.com
* add '3 Col Portfolio' theme from startbootstrap.com
* add '4 Col Portfolio' theme from startbootstrap.com
* add 'Modern Business' theme from startbootstrap.com
* add 'Simple Sidebar' theme from startbootstrap.com
* add 'Stylish Portfolio' theme from startbootstrap.com
* add 'Portfolio Item' theme from startbootstrap.com
* add 'Business Casual' theme from startbootstrap.com
* add 'Shop Homepage' theme from startbootstrap.com
* add 'Shop Item' theme from startbootstrap.com
* add 'Landing Page' theme from startbootstrap.com
* add 'Clean Blog' theme from startbootstrap.com
* add 'Blog Post' theme from startbootstrap.com to blog_home theme

h3. 0.6.0 May 10, 2015

* add 'Bare' theme from startbootstrap.com

h3. 0.5.16 April 27, 2015

* 'before_filter' becomes 'before_action' for upcoming Rails 5.0

h3. 0.5.15 September 14, 2014

* generate a navlink for Upmin using the 'rails_layout' gem instead

h3. 0.5.14 September 14, 2014

* add generator for Upmin for an admin interface

h3. 0.5.13 August 27, 2014

* support 'rails-devise-roles' example application

h3. 0.5.12 August 14, 2014

* minor change to routes for OmniAuth user pages

h3. 0.5.11 July 13, 2014

* generate JavaScript for analytics

h3. 0.5.10 July 2, 2014

* don't generate a home page if it already exists
* generate routes for OmniAuth for users pages

h3. 0.5.9 June 30, 2014
