@@ -1,3 +1,3 @@
 module RailsAppsPages
-  VERSION = "0.6.2"
+  VERSION = "0.6.3"
 end
